version 7.1
date: dd/mm/yyyy
  * added custom services with an implementation based on SPARQL
  * added the prefix resolution in all Search services
  * added SHACL to PEARL
  * add a sail for trivial reasoning (based on symmetric / inverse properties)
  * use the Alignment Services API defined by MAPLE
  * Update to MAPLE 0.0.6
  * add a Deployer for submitting an ontology (in fact, an OWL ontology or a SKOS thesaurus) to
    BioPortal-compatible catalogs
  * make both the base URI and the ontology mirror file optional when importing an ontology from a local file
  * port of the remote alignment system (Genoma) is now configurable
  * fix mishandling of status code by HTTP-based deployers
  * fix authentication bug when deleting the remote repositories associated with a project
  * added support in CustomForm for new Pearl annotations
  * updated dependency on Sheet2RDF 4.0.1
  * updated dependency on CODA 1.7.0

version 7.0
date: 06/02/2020
  * new EDOAL model type for alignment projects
  * added support for SHACL
  * added support for datatype definitions through enumerations, restrictions and general dataranges expressed
    in Manchester syntax
  * when adding a topConcept to a concept scheme, that concept is added to that scheme explicitly with 
    skos:inScheme in addition to the usual skos:topConceptOf
  * rename the service class GENOMA to RemoteAlignmentServices, in order to foresee a more general set of APIs
    for remote alignment services
  * add the possibility to delete a task in remote alignment services
  * remove checks for local projects in the dataset discovery procedure
  * add the possibility to customize the threshold in bytes on the amount of data to be profiled during a preload
  * index preloaded data for fulltext search
  * change the communication protocol with the change tracker sail to validate commits (as a workaround for an
    issue with invalid IRIs that can be generated by the validation subsystem)